--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,30 +1,29 @@
 version: 0.2
 
 runtime-versions:
-  nodejs: 14
-
-env:
-  variables:
-    NODE_ENV: production
+  nodejs: 14  # Node.js 버전 선택 (필요한 버전으로 변경)
 
 phases:
   install:
     commands:
-      - echo "Installing dependencies..."
-      - cd /codebuild/output/src2269795634/src  # 소스 코드 경로로 이동
-      - ls -la  # package.json 파일이 있는지 확인
-      - npm install
+      - echo "Checking the directory structure..."
+      - ls -la /codebuild/output/src2269795634/src  # 소스 코드가 다운로드된 경로 확인
+      - echo "Changing directory to the source folder..."
+      - cd /codebuild/output/src2269795634/src  # 경로 변경 (실제 소스 코드 디렉토리)
+      - ls -la  # 변경된 디렉토리 확인 (package.json이 있는지 확인)
+      - echo "Running npm install..."
+      - npm install  # 의존성 설치
 
   build:
     commands:
       - echo "Building the application..."
-      - npm run build
+      - npm run build  # 애플리케이션 빌드 (build 스크립트가 정의되어 있다고 가정)
 
   post_build:
     commands:
-      - echo "Build completed successfully"
-      - npm run deploy
+      - echo "Build completed successfully."
+      - npm run deploy  # 배포 스크립트 실행 (선택 사항)
 
 cache:
   paths:
-    - 'node_modules/**/*'
+    - 'node_modules/**/*'  # node_modules 캐시 설정 (빌드 시간을 줄이기 위해)
